--- a/css/contact.css
+++ b/css/contact.css
@@ -25,8 +25,7 @@
     margin: 0 auto;
 }
 
-#contact-form .inner > div:nth-child(1),
-#contact-form .inner > div:nth-child(2) {
+#contact-form .form-header {
     text-align: center;
 }
 
