[M6] Mobile responsiveness for Jumbotron section on Home page and fixed responsiveness for Section Banners on all pages

--- a/css/about.css
+++ b/css/about.css
@@ -13,6 +13,14 @@
     padding-top: 25px;
 }
 
+/* Section Banner section */
+
+@media (max-width: 610px) {
+    .section-banner br {
+        display: inline-block;
+    }
+}
+
 /* Photo Highlights section */
 
 #photo-highlights .col:nth-child(1) {
