--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,7 @@
 }
 
 .button {
-    margin-top: 25px;
+    margin-top: 24px;
     padding: 12px 24px;
     border-width: 4px;
     border-style: solid;
@@ -12,11 +12,16 @@
     font-weight: 600;
     display: block;
     transition: 0.3s all;
+    background-color: transparent;
 }
 
 .button:hover,
 .button:active {
     text-decoration: none;
+}
+
+.button:focus {
+    outline: none;
 }
 
 /* Typography */
@@ -119,7 +124,7 @@
     color: #676767;
 }
 
-#footer .input button:active, 
+#footer .input button:active,
 #footer .social-media a:hover > i,
 #footer .social-media a:active,
 .button:hover,
@@ -388,6 +393,10 @@
 
 .info img {
     width: 70%;
+}
+
+.info .title {
+    margin-bottom: 8px;
 }
 
 @media (max-width: 992px) and (min-width: 768px) {
