--- a/css/index.css
+++ b/css/index.css
@@ -350,13 +350,13 @@
 /* Photo Highlights section */
 
 #photo-highlights .col:nth-child(1) {
-    background-image: url(../images/test-a.jpeg);
+    background-image: url("../images/IMG_7223.jpg");
 }
 
 #photo-highlights .col:nth-child(2) {
-    background-image: url(../images/test-b.jpeg);
+    background-image: url("../images/IMG_7377.jpg");
 }
 
 #photo-highlights .col:nth-child(3) {
-    background-image: url(../images/test-c.jpeg);
+    background-image: url("../images/IMG_7184.jpg");
 }
