--- a/css/about.css
+++ b/css/about.css
@@ -24,13 +24,13 @@
 /* Photo Highlights section */
 
 #photo-highlights .col:nth-child(1) {
-    background-image: url(../images/test-c.jpeg);
+    background-image: url("../images/IMG_7352.jpg");
 }
 
 #photo-highlights .col:nth-child(2) {
-    background-image: url(../images/test-b.jpeg);
+    background-image: url("../images/IMG_7200.jpg");
 }
 
 #photo-highlights .col:nth-child(3) {
-    background-image: url(../images/test-a.jpeg);
+    background-image: url("../images/IMG_7338.jpg");
 }
