--- a/css/common.css
+++ b/css/common.css
@@ -24,6 +24,12 @@
     outline: none;
 }
 
+.button.disabled {
+    background-color: #828282;
+    color: #fafafa;
+    cursor: not-allowed;
+}
+
 .dropdown-input {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='rgb(130, 130, 130)' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E");
     border-width: 2px;
