--- a/css/contact.css
+++ b/css/contact.css
@@ -2,12 +2,6 @@
     width: 106px;
 }
 
-/* Jumbotron section */
-
-#jumbotron img {
-    padding-top: 25px;
-}
-
 /* Contact Form section */
 
 #contact-form {
@@ -47,14 +41,14 @@
 }
 
 @media (max-width: 992px) and (min-width: 577px){
-    #contact-form .inner { 
+    #contact-form .inner {
         width: 80%;
         padding: 75px;
     }
 }
 
 @media (max-width: 576px) {
-    #contact-form .inner { 
+    #contact-form .inner {
         width: 90%;
         padding: 50px 35px;
     }
@@ -73,7 +67,7 @@
     #contact-form .title {
         font-size: 24px;
     }
-    
+
     #contact-form .description {
         font-size: 16px;
         margin: 10px auto 0 auto;
@@ -91,15 +85,15 @@
 /* Photo Highlights section */
 
 #photo-highlights .col:nth-child(1) {
-    background-image: url("../images/IMG_7414.jpg");
+    background-image: url("../images/photo-highlight-7.jpg");
     background-position: right center;
 }
 
 #photo-highlights .col:nth-child(2) {
-    background-image: url("../images/IMG_7188.jpg");
+    background-image: url("../images/photo-highlight-8.jpg");
 }
 
 #photo-highlights .col:nth-child(3) {
-    background-image: url("../images/IMG_7392.jpg");
+    background-image: url("../images/photo-highlight-9.jpg");
     background-position: right center;
 }
