--- a/css/careers.css
+++ b/css/careers.css
@@ -32,6 +32,20 @@
     font-size: 14px;
 }
 
+@media (max-width: 500px) {
+    #careers .content {
+        padding: 32px;
+    }
+
+    #careers .title {
+        font-size: 24px;
+    }
+
+    #careers .description {
+        font-size: 16px;
+    }
+}
+
 /* Photo Highlights section */
 
 #photo-highlights .col:nth-child(1) {
