--- a/css/index.css
+++ b/css/index.css
@@ -176,15 +176,21 @@
     }
 }
 
-@media (min-width: 550px) {
+@media (min-width: 850px) {
     #latest-flavors .container {
         padding: 150px 0;
     }
 }
 
-@media (max-width: 549px) {
+@media (max-width: 849px) and (min-width: 768px) {
     #latest-flavors .container {
         padding: 120px 0;
+    }
+}
+
+@media (max-width: 767px) {
+    #latest-flavors .container {
+        padding: 80px 0;
     }
 }
 
